--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Rock Paper Scissors Game</title>
+        <title>Pokemon RPS</title>
     </head>
-    <body></body>
+    <body>
+        <div>
+            <h1>Pokemon RPS</h1>
+            <p>Select your choice</p>
+        </div>
+        <div>
+            <button>Charmander</button>
+            <button>Squirtle</button>
+            <button>Bulbasaur</button>
+        </div>
+        <div>
+            <h2>You: 0</h2>
+            <h2>Computer: 0</h2>
+            <button>Let's Fight</button>
+        </div>
+        <div>
+            <h3>Rules</h3>
+            <ul>
+                <li>Charmander beats Bulbasaur</li>
+                <li>Squirtle beats Charmander</li>
+                <li>Bulbasaur beats Squirtle</li>
+            </ul>
+        </div>
+    </body>
     <script src="script.js" defer></script>
 </html>
