add display of selection

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <body>
         <div class="title-container">
             <h1>
-                <span class="pokeball-icon" aria-hidden="true"></span>
+                <span class="pokeball-icon"></span>
                 Pokemon RPS
             </h1>
         </div>
@@ -25,15 +25,15 @@
             <div class="pokemon-buttons">
                 <button
                     class="pokemon-btn pokemon-btn--charmander"
-                    aria-label="Choose Charmander"
+                    id="Charmander"
                 ></button>
                 <button
                     class="pokemon-btn pokemon-btn--squirtle"
-                    aria-label="Choose Charmander"
+                    id="Squirtle"
                 ></button>
                 <button
                     class="pokemon-btn pokemon-btn--bulbasaur"
-                    aria-label="Choose Charmander"
+                    id="Bulbasaur"
                 ></button>
             </div>
             <div class="choices-display"></div>
@@ -49,10 +49,7 @@
             <h3>Rules</h3>
             <ul>
                 <li>
-                    <span
-                        class="rule-icon rule-icon--charmander"
-                        aria-hidden="true"
-                    ></span>
+                    <span class="rule-icon rule-icon--charmander"></span>
                     <span class="pokemon-name pokemon-name--fire"
                         >Charmander</span
                     >
@@ -60,16 +57,10 @@
                     <span class="pokemon-name pokemon-name--grass"
                         >Bulbasaur</span
                     >
-                    <span
-                        class="rule-icon rule-icon--bulbasaur"
-                        aria-hidden="true"
-                    ></span>
+                    <span class="rule-icon rule-icon--bulbasaur"></span>
                 </li>
                 <li>
-                    <span
-                        class="rule-icon rule-icon--squirtle"
-                        aria-hidden="true"
-                    ></span>
+                    <span class="rule-icon rule-icon--squirtle"></span>
                     <span class="pokemon-name pokemon-name--water"
                         >Squirtle</span
                     >
@@ -77,16 +68,10 @@
                     <span class="pokemon-name pokemon-name--fire"
                         >Charmander</span
                     >
-                    <span
-                        class="rule-icon rule-icon--charmander"
-                        aria-hidden="true"
-                    ></span>
+                    <span class="rule-icon rule-icon--charmander"></span>
                 </li>
                 <li>
-                    <span
-                        class="rule-icon rule-icon--bulbasaur"
-                        aria-hidden="true"
-                    ></span>
+                    <span class="rule-icon rule-icon--bulbasaur"></span>
                     <span class="pokemon-name pokemon-name--grass"
                         >Bulbasaur</span
                     >
@@ -94,10 +79,7 @@
                     <span class="pokemon-name pokemon-name--water"
                         >Squirtle</span
                     >
-                    <span
-                        class="rule-icon rule-icon--squirtle"
-                        aria-hidden="true"
-                    ></span>
+                    <span class="rule-icon rule-icon--squirtle"></span>
                 </li>
             </ul>
         </div>
