--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <body>
         <div class="title-container">
             <h1>
-                <span class="pokeball-icon"></span>
+                <span class="pokeball-icon icon-40"></span>
                 Pokemon RPS
             </h1>
         </div>
 
-        <div class="content-container">
+        <div class="content-container blur-box">
             <p>Select your choice</p>
             <div class="pokemon-buttons">
                 <button
@@ -45,11 +45,11 @@
             </div>
         </div>
 
-        <div class="rules-container">
+        <div class="rules-container blur-box">
             <h3>Rules</h3>
             <ul>
                 <li>
-                    <span class="rule-icon rule-icon--charmander"></span>
+                    <span class="rule-icon--charmander icon-40"></span>
                     <span class="pokemon-name pokemon-name--fire"
                         >Charmander</span
                     >
@@ -57,10 +57,10 @@
                     <span class="pokemon-name pokemon-name--grass"
                         >Bulbasaur</span
                     >
-                    <span class="rule-icon rule-icon--bulbasaur"></span>
+                    <span class="rule-icon--bulbasaur icon-40"></span>
                 </li>
                 <li>
-                    <span class="rule-icon rule-icon--squirtle"></span>
+                    <span class="rule-icon--squirtle icon-40"></span>
                     <span class="pokemon-name pokemon-name--water"
                         >Squirtle</span
                     >
@@ -68,10 +68,10 @@
                     <span class="pokemon-name pokemon-name--fire"
                         >Charmander</span
                     >
-                    <span class="rule-icon rule-icon--charmander"></span>
+                    <span class="rule-icon--charmander icon-40"></span>
                 </li>
                 <li>
-                    <span class="rule-icon rule-icon--bulbasaur"></span>
+                    <span class="rule-icon--bulbasaur icon-40"></span>
                     <span class="pokemon-name pokemon-name--grass"
                         >Bulbasaur</span
                     >
@@ -79,7 +79,7 @@
                     <span class="pokemon-name pokemon-name--water"
                         >Squirtle</span
                     >
-                    <span class="rule-icon rule-icon--squirtle"></span>
+                    <span class="rule-icon--squirtle icon-40"></span>
                 </li>
             </ul>
         </div>
